[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "centernet_ilvo"
version = "0.0.15"
authors = [
    { name="Axel Willekens", email="axel.willekens@ilvo.vlaanderen.be" }
]
description = "The ilvo plant centre model package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {}
